// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_outer_classname = "OppProto";

package pandora;

import "google/protobuf/empty.proto";

service Opp {
  // Open an rfcommChannel for an OBEX connection.
  rpc OpenRfcommChannel(OpenRfcommChannelRequest) returns (google.protobuf.Empty);
  // Open an l2cap channel for an OBEX connection.
  rpc OpenL2capChannel(OpenL2capChannelRequest) returns (google.protobuf.Empty);
  // Accept Put request by the Push Client to the Push Server within an OBEX connection.
  rpc AcceptPutOperation(google.protobuf.Empty) returns (AcceptPutOperationResponse);
}

message OpenRfcommChannelRequest {
  bytes address = 1;
}

message OpenL2capChannelRequest {
  bytes address = 1;
}

enum PutStatus {
  ACCEPTED = 0;
  DECLINED = 1;
}

message AcceptPutOperationResponse {
  PutStatus status = 1;
}